<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:baselineAligned="false"
    android:id="@+id/footerMenu"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linear_Layout_menu_footer_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:id="@+id/view_layout_bottom_bar_home"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_home"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_menu_home" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Layout_menu_footer_product"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:id="@+id/view_layout_bottom_bar_product"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_product"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_menu_product" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Layout_menu_footer_order"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:id="@+id/view_layout_bottom_bar_order"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_order"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_menu_order" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Layout_menu_footer_historic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:id="@+id/view_layout_bottom_bar_historic"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_profile"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_menu_historic" />

    </LinearLayout>

</LinearLayout>
