<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="3dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_crdProduct_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txt_crdProduct_info"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="New Text"
            android:textSize="12sp"
            android:maxLines="1"
            android:textColor="@color/accent_material_light"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:layout_toRightOf="@+id/img_crdProduct_icon"
            android:layout_toEndOf="@+id/img_crdProduct_icon"
            android:layout_toStartOf="@+id/txt_crdProduct_progress"
            android:layout_toLeftOf="@+id/txt_crdProduct_progress"
            tools:ignore="PrivateResource" />

        <TextView
            android:id="@+id/txt_crdProduct_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@+id/txt_crdProduct_info"
            android:layout_alignLeft="@+id/txt_crdProduct_info"
            android:layout_alignStart="@+id/txt_crdProduct_info"
            android:text="New Text"
            android:textColor="#808080"
            android:textSize="12sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/txt_crdProduct_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@+id/txt_crdProduct_title"
            android:layout_alignLeft="@+id/txt_crdProduct_title"
            android:layout_alignStart="@+id/txt_crdProduct_title"
            android:text="New Text"
            android:textColor="#808080"
            android:textSize="12sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="New Text"
            android:id="@+id/txt_crdProduct_progress"
            android:textColor="#808080"
            android:textSize="12sp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="3dp"
            android:text="New Text"
            android:textSize="16sp"
            android:textColor="#808080"
            android:maxLines="3"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:id="@+id/txt_crdProduct_description"
            android:layout_below="@+id/img_layCardProduct_details" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:id="@+id/img_layCardProduct_details"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/app_name"
            android:layout_below="@+id/img_crdProduct_icon"
            />
        <!-- android:background="@mipmap/london_flat" -->

        <Button
            android:id="@+id/btn_layCardProduct_details"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:padding="0dp"
            android:text="@string/msg_card_to_view_event"
            android:layout_below="@+id/txt_crdProduct_description"
            android:textColor="@color/accent_material_light"
            tools:ignore="PrivateResource,RtlSymmetry" />


        <ImageButton
            android:id="@+id/imb_layCardProduct_saveEvent"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            app:srcCompat="@drawable/ic_more_counseling"
            android:contentDescription="@string/card_view_counseling"
            android:layout_below="@+id/txt_crdProduct_description"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/imb_layCardProduct_share"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            app:srcCompat="@drawable/ic_more_photo"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/share"
            android:layout_below="@+id/txt_crdProduct_description"
            android:layout_toLeftOf="@+id/imb_layCardProduct_saveEvent"
            android:layout_toStartOf="@+id/imb_layCardProduct_saveEvent" />

        <ImageButton
            android:id="@+id/imb_layCardProduct_location"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            app:srcCompat="@drawable/ic_more_share"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/card_view_location"
            android:layout_below="@+id/txt_crdProduct_description"
            android:layout_toLeftOf="@+id/imb_layCardProduct_share"
            android:layout_toStartOf="@+id/imb_layCardProduct_share" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
